# substrate-node-template-lastly

./: README.md
config/: types.json
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/chain-extension/: Cargo.toml
pallets/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs  tests.rs
pallets/exchange/: Cargo.toml
pallets/exchange/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
