[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-exchange'
version = "2.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-benchmarking = {default-features = false, version = "3.0.0", optional = true}
sp-std = {default-features = false, version = "3.0.0" }

sp-runtime = { default-features = false, version = "3.0.0" }

orml-traits = { default-features = false, version = "0.4.0"}
orml-utilities = {default-features = false, version = "0.4.0"}

[dev-dependencies]
serde = { version = "1.0.101" }

sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
	'orml-traits/std',
	'orml-utilities/std',
	'orml-utilities/std',
]
runtime-benchmarks = ["frame-benchmarking"]
